--- a/package.json
+++ b/package.json
@@ -4,17 +4,12 @@
   "description": "视频格式转换工具",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "npm install"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "fluent-ffmpeg": "^2.1.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
   },
   "engines": {
     "node": ">=14.0.0"
