--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,20 @@
   ],
   "routes": [
     {
+      "src": "/health",
+      "dest": "server.js"
+    },
+    {
+      "src": "/convert-batch",
+      "dest": "server.js",
+      "methods": ["POST"]
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 } 
