Fix routing issues and add root route handler

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,10 @@
       "methods": ["POST"]
     },
     {
+      "src": "/api/(.*)",
+      "dest": "/server.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "/server.js"
     }
